# flask-docker

./: Dockerfile  Makefile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.dev.txt
src/flask_docker/: app.py
tests/: test_api.py
